--- a/docs/assets/css/journal.css
+++ b/docs/assets/css/journal.css
@@ -35,6 +35,30 @@ body {
     margin: 0;
 }
 
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+td {
+    border-color: white;
+    border-style: solid;
+    border-width: 1px;
+    overflow: hidden;
+    padding: 10px 5px;
+    word-break: normal;
+}
+
+th {
+    border-color: white;
+    border-style: solid;
+    border-width: 1px;
+    font-weight: normal;
+    overflow: hidden;
+    padding: 10px 5px;
+    word-break: normal;
+}
+
 .wrapper {
     width: 100%;
     max-width: 800px;
